[+]add GetEqpStock service metho：取得EQP庫存.

--- a/EMP.Website/EMP.Website.csproj
+++ b/EMP.Website/EMP.Website.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\EMP.Service\EMP.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ClientApp\" />
+  </ItemGroup>
+
 </Project>
