--- a/EMP.Service/EMP.Service.csproj
+++ b/EMP.Service/EMP.Service.csproj
@@ -7,16 +7,24 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Models\Request\**" />
-    <Compile Remove="Models\Response\**" />
-    <EmbeddedResource Remove="Models\Request\**" />
-    <EmbeddedResource Remove="Models\Response\**" />
-    <None Remove="Models\Request\**" />
-    <None Remove="Models\Response\**" />
+    <Compile Remove="Dtos\Request\**" />
+    <Compile Remove="Dtos\Response\**" />
+    <EmbeddedResource Remove="Dtos\Request\**" />
+    <EmbeddedResource Remove="Dtos\Response\**" />
+    <None Remove="Dtos\Request\**" />
+    <None Remove="Dtos\Response\**" />
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Dtos\LensItemInfo.cs" />
+    <Compile Remove="Implements\OracleService.cs" />
+    <Compile Remove="Interfaces\IWCFConn.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="UniversalLibrary.WCF.CAEService" Version="1.8.2" />
   </ItemGroup>
 
 </Project>
