匯出比對報表相關功能完成

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,9 @@
 
 # ignore folder
 [Ii]gnore/
-**/[Cc]ontent/[Tt]emp/*
+**/[Cc]ontent/[Uu]pload/*
+**/[Cc]ontent/[Dd]ownload/*
+
 
 # User-specific files
 *.rsuser
