--- a/EMP.Website/ClientApp/angular.json
+++ b/EMP.Website/ClientApp/angular.json
@@ -30,7 +30,8 @@
             "styles": [
               "src/styles.scss",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/ngx-spinner/animations/ball-circus.css"
+              "./node_modules/ngx-spinner/animations/ball-circus.css",
+              "./node_modules/sweetalert2/src/sweetalert2.scss"
             ],
             "scripts": []
           },
