--- a/EMP.Website/ClientApp/package.json
+++ b/EMP.Website/ClientApp/package.json
@@ -26,6 +26,7 @@
     "bootstrap-icons": "^1.10.3",
     "ngx-spinner": "^15.0.1",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.7.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
