[*]update angular.json architect:builder [+]add package.json scripts:build-vt02. build-vt01. prod [*]add article wrap css style

--- a/EMP.Website/ClientApp/package.json
+++ b/EMP.Website/ClientApp/package.json
@@ -5,6 +5,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-vt02": "ng build --configuration=vt02",
+    "build-vt01": "ng build --configuration=vt01 && gzip-all \"./dist/*.{css,js}\"",
+    "prod": "ng build --prod && gzip-all \"./dist/*.{css,js}\"",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
