--- a/EMP.Website/ClientApp/angular.json
+++ b/EMP.Website/ClientApp/angular.json
@@ -29,11 +29,15 @@
             ],
             "styles": [
               "src/styles.scss",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/ngx-spinner/animations/ball-circus.css",
-              "./node_modules/sweetalert2/src/sweetalert2.scss"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-spinner/animations/ball-circus.css",
+              "node_modules/sweetalert2/src/sweetalert2.scss",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/@popperjs/core/dist/umd/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "vt02": {
