--- a/EMP.Website/ClientApp/package.json
+++ b/EMP.Website/ClientApp/package.json
@@ -25,8 +25,10 @@
     "@angular/router": "^15.2.0",
     "@ng-bootstrap/ng-bootstrap": "^14.0.1",
     "@popperjs/core": "^2.11.6",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "font-awesome": "^4.7.0",
     "ngx-spinner": "^15.0.1",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.3",
