[+]新增VT01. VT02. PRD設定檔 [*]更新WCFService

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@
 *.user
 *.userosscache
 *.sln.docstates
+**/[Ee]MP.Website/*.json
+**/[Ee]MP.Website/appsettings.Development.json
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
