--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 *.userosscache
 *.sln.docstates
 **/[Ee]MP.Website/*.json
+/EMP.Website/appsettings.Development.json
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
